--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Tibet</h1>
+	<br>
+	<p>Tibet, on the lofty Tibetan Plateau on the northern side of the Himalayas, is an autonomous region of China. It's nicknamed the “Roof of the World” for its towering peaks. It shares Mt. Everest with Nepal. Its capital, Lhasa, is site of hilltop Potala Palace, once the Dalai Lama’s winter home, and Jokhang Temple, Tibet’s spiritual heart, revered for its golden statue of the young Buddha.</p>
+	<ol>
+		<li>abc</li>
+		<li>def</li>
+		<li><b>ghi</b></li>
+		<li>jkl</li>
+		<li>mno</li>
+	</ol>
+	<ul>
+		<li>Roti</li>
+		<li>Sabji</li>
+		<li><b>Chicken</b></li>
+		<li>paneer</li>
+		<li>Matan</li>
+	</ol>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
