--- a/main.html
+++ b/main.html
@@ -15,14 +15,14 @@
 		<li>abc</li>
 		<li>def</li>
 		<li><b>ghi</b></li>
-		<li>jkl</li>
+		<li><i>jkl</i></li>
 		<li>mno</li>
 	</ol>
 	<ul>
 		<li>Roti</li>
 		<li>Sabji</li>
 		<li><b>Chicken</b></li>
-		<li>paneer</li>
+		<li><i>paneer</i></li>
 		<li>Matan</li>
 	</ol>
 	</ul>
